@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: test-sctp_n.8.man,v 0.9.2.4 2006/10/22 04:17:17 brian Exp $
+.\" @(#) $Id: test-sctp_n.8.man,v 0.9.2.5 2006/12/21 11:33:29 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2006/10/22 04:17:17 $ by $Author: brian $
+.\" Last Modified $Date: 2006/12/21 11:33:29 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: test-sctp_n.8.man,v $
+.\" Revision 0.9.2.5  2006/12/21 11:33:29  brian
+.\" - updates for release, current development
+.\"
 .\" Revision 0.9.2.4  2006/10/22 04:17:17  brian
 .\" - documented client server options
 .\"
