@@ -1,3 +1,8 @@
+2006-12-21  Brian Bidulock  <bidulock@openss7.org>
+
+	* strxns/src/drivers/dl2.c: added new drivers
+	* strxns/src/drivers/hdlc.c: added new drivers
+
 2006-12-20  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/drivers/dl_ip.c: working up driver a bit
