@@ -1,3 +1,7 @@
+2006-12-21  Brian Bidulock  <bidulock@openss7.org>
+
+	* strchan/src/drivers/v401p.c: changes for release
+
 2006-12-20  Brian Bidulock  <bidulock@openss7.org>
 
 	* doc/man/Makefile.am: updated and corrected documentation for release
